--- a/dynamically_populating_table.html
+++ b/dynamically_populating_table.html
@@ -40,8 +40,8 @@
             myTable +
             `
                 <tr>
-                    <td>1</td>
-                    <td>2</td>
+                    <td>${student.name}</td>
+                    <td>${student.age}</td>
                 </tr>`;
         });
         myTable = myTable + "</table>";
