dynamic table assignment

--- a/dynamic_table_assignment.html
+++ b/dynamic_table_assignment.html
@@ -9,7 +9,7 @@
     <h1>Dynamic Table</h1>
     <div id="dynamic_table"></div>
     <script>
-        var data = [{name:"john", age:20, email:"abc@gmail.com"},];
+        // var data = [{name:"john", age:20, email:"abc@gmail.com"},];
         var myDiv = document.getElementById('dynamic_table');
         var myTable = document.createElement('table');
         var myTableHeading = document.createElement('tr');
